[package]
name = "HellsRustyGate"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
cc = "1.2.4"

[dependencies.windows]
version = "0.58.0"
features = ["Win32_System_Threading", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_System_Diagnostics_Debug", "Win32_System_Memory"]

[dependencies]
scopeguard = "1.2.0"